...
            android:id="@+id/resultListFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

         <LinearLayout
            android:id="@+id/resultPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
               android:id="@+id/prev_curr_exp_divider"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/prev_curr_exp_divider"/>

            <com.llamacorp.equate.view.DynamicTextView
               android:id="@+id/resultPreview"
               style="@style/ResultPreview"
               xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:gravity="end"
...
            android:inputType="textNoSuggestions"
            android:textSize="40sp"
            customNS:minimumTextSize="25sp"/>
      </LinearLayout>

      <LinearLayout
         android:id="@+id/unit_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.8"
         android:background="@color/app_background"
         android:gravity="bottom"
         android:orientation="vertical">

         <com.viewpagerindicator.TabPageIndicator
            android:id="@+id/unit_type_titles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

         <android.support.v4.view.ViewPager
            android:id="@+id/unit_pager"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>
      </LinearLayout>
   </LinearLayout>

...
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/app_background">

         <Button
            android:id="@+id/clear_button"
            style="@style/CalcButton.Clear"
            android:text="@string/clear_button"/>

         <com.llamacorp.equate.view.AnimatedHoldButton
            android:id="@+id/percent_button"
            style="@style/CalcButton.Operator"
            xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
            customNS:primary_text="@string/percent_button"
            customNS:secondary_text="@string/ee_button"
            customNS:secondary_text_font_size_percentage="50"/>

         <com.llamacorp.equate.view.AnimatedHoldButton
            android:id="@+id/divide_button"
            style="@style/CalcButton.Operator"
            xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
            customNS:primary_text="@string/divide_button"
            customNS:secondary_text="@string/invert_button"
            customNS:secondary_text_font_size_percentage="50"/>

         <ImageButton
            android:id="@+id/backspace_button"
            style="@style/CalcButton.Operator"
            android:adjustViewBounds="false"
            android:src="@drawable/ic_action_backspace"/>
      </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/app_background">

         <Button
            android:id="@+id/seven_button"
            style="@style/CalcButton.Numb"
            android:text="@string/seven_button"/>

         <Button
            android:id="@+id/eight_button"
            style="@style/CalcButton.Numb"
            android:text="@string/eight_button"/>

         <Button
            android:id="@+id/nine_button"
            style="@style/CalcButton.Numb"
            android:text="@string/nine_button"/>

         <com.llamacorp.equate.view.AnimatedHoldButton
            android:id="@+id/multiply_button"
            style="@style/CalcButton.Operator"
...
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/app_background">

         <Button
            android:id="@+id/four_button"
            style="@style/CalcButton.Numb"
            android:text="@string/four_button"/>

         <Button
            android:id="@+id/five_button"
            style="@style/CalcButton.Numb"
            android:text="@string/five_button"/>

         <Button
            android:id="@+id/six_button"
            style="@style/CalcButton.Numb"
...
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/app_background">

         <Button
            android:id="@+id/one_button"
            style="@style/CalcButton.Numb"
            android:text="@string/one_button"/>

         <Button
            android:id="@+id/two_button"
            style="@style/CalcButton.Numb"
            android:text="@string/two_button"/>

         <Button
            android:id="@+id/three_button"
            style="@style/CalcButton.Numb"
            android:text="@string/three_button"/>

         <Button
            android:id="@+id/plus_button"
            style="@style/CalcButton.Operator"
...
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/app_background">

         <Button
            android:id="@+id/zero_button"
            style="@style/CalcButton.Numb"
            android:text="@string/zero_button"/>

         <Button
            android:id="@+id/decimal_button"
            style="@style/CalcButton.Numb"
            android:text="@string/decimal_button"/>

         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
...
               customNS:primary_text="@string/open_para_button"
               customNS:secondary_text="@string/open_para_long_button"
               customNS:secondary_text_font_size_percentage="45"/>


            <com.llamacorp.equate.view.AnimatedHoldButton
               android:id="@+id/close_para_button"
               style="@style/SmallOperator"
               xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
               android:layout_marginLeft="@dimen/CalcButtonMargin"
               customNS:primary_text="@string/close_para_button"
               customNS:secondary_text="@string/close_para_long_button"
               customNS:secondary_text_font_size_percentage="45"/>

         </LinearLayout>

         <com.llamacorp.equate.view.AnimatedHoldButton
            android:id="@+id/equals_button"
            style="@style/CalcButton.Equals"
            xmlns:customNS="http://schemas.android.com/apk/res/com.llamacorp.equate"
            customNS:pressed_color="@color/equal_button_pressed"
            customNS:primary_text="@string/equals_button"
            customNS:secondary_text="@string/equals_secondary_text"
            customNS:secondary_text_color="@color/equals_secondary_text_color_normal"/>
...
