<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/list_item_result_convertUnitDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/list_item_result_textPrevQuery"
            style="@style/ResultText"
            android:gravity="left"
            android:paddingRight="15dp" >
        </TextView>

        <TextView
            android:id="@+id/list_item_result_textPrevAnswer"
            style="@style/ResultText"
            android:gravity="right"
            android:paddingLeft="15dp" >
        </TextView>
    </LinearLayout>

</LinearLayout>