<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
   android:id="@+id/drawer_layout"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
   tools:openDrawer="start">

   <include
      layout="@layout/activity_calc"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

   <android.support.design.widget.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:fitsSystemWindows="true"
      app:headerLayout="@layout/nav_header_main"
      app:menu="@menu/activity_main_drawer"/>


</android.support.v4.widget.DrawerLayout>
